#618: remove powermock