@@ -39,7 +39,7 @@
 		<dependency>
 		  <groupId>com.deque.html.axe-core</groupId>
 		  <artifactId>selenium</artifactId>
-		  <version>4.7.0</version>
+		  <version>4.8.0</version>
 		</dependency>
 		<dependency>
 		  <groupId>com.eatthepath</groupId>
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>com.atlassian.jira</groupId>
 			<artifactId>jira-rest-java-client-app</artifactId>
-			<version>5.2.4</version>
+			<version>5.2.7</version>
 			<exclusions>
 				<exclusion>
           			<groupId>org.springframework</groupId>
@@ -93,8 +93,8 @@
             <artifactId>java-client</artifactId>
         </dependency>
         <dependency>
-		  <groupId>com.vdurmont</groupId>
-		  <artifactId>semver4j</artifactId>
+			<groupId>org.semver4j</groupId>
+			<artifactId>semver4j</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -104,10 +104,6 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 		</dependency>
-		<dependency>
-          <groupId>org.seleniumhq.selenium</groupId>
-          <artifactId>selenium-devtools-v104</artifactId>
-        </dependency>
 	    <dependency>
 	      <groupId>net.java.dev.jna</groupId>
 	      <artifactId>jna-platform</artifactId>
@@ -116,10 +112,6 @@
 		    <groupId>org.zeroturnaround</groupId>
 		    <artifactId>zt-zip</artifactId>
 		</dependency>
-        <dependency>
-	        <groupId>net.lightbody.bmp</groupId>
-	        <artifactId>browsermob-core</artifactId>
-   		</dependency>
    		<dependency>
 			<groupId>com.github.stephenc.monte</groupId>
 			<artifactId>monte-screen-recorder</artifactId>
@@ -151,7 +143,7 @@
 	    <dependency>
 	      <groupId>org.apache.poi</groupId>
 	      <artifactId>poi-ooxml</artifactId>
-	      <version>5.2.2</version>
+	      <version>5.2.4</version>
 	    </dependency>
 		<dependency>
 			<groupId>com.microsoft.ews-java-api</groupId>
@@ -166,7 +158,7 @@
 		<dependency>
 			<groupId>com.hierynomus</groupId>
 			<artifactId>sshj</artifactId>
-			<version>0.32.0</version>
+			<version>0.37.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.mail</groupId>
@@ -176,12 +168,12 @@
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.14.3</version>
+			<version>1.16.2</version>
 		</dependency>
 		<dependency>
-		  	<groupId>com.oracle.database.jdbc</groupId>
-		  	<artifactId>ojdbc6</artifactId>
-		  	<version>11.2.0.4</version>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc11</artifactId>
+			<version>23.3.0.23.09</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -193,7 +185,7 @@
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
-			<version>5.1.0</version>
+			<version>7.0.0</version>
 			<exclusions>
 			    <exclusion>
                     <groupId>com.google.guava</groupId>
@@ -224,7 +216,7 @@
 		<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.10.0</version>
+            <version>1.11.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
@@ -245,12 +237,12 @@
 		<dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
-            <version>7.2.3</version>
+            <version>7.14.0</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
 		    <artifactId>cucumber-java</artifactId>
-		    <version>7.2.3</version>
+		    <version>7.14.0</version>
         </dependency>
         <dependency>
 			<groupId>org.openpnp</groupId>
@@ -261,12 +253,12 @@
 		<dependency>
 		    <groupId>com.github.javaparser</groupId>
 		    <artifactId>javaparser-core</artifactId>
-		    <version>3.24.0</version>
+		    <version>3.25.6</version>
 		</dependency>
 		<dependency>
 		    <groupId>net.openhft</groupId>
 		    <artifactId>compiler</artifactId>
-		    <version>2.23ea0</version>
+		    <version>2.24ea0</version>
 		</dependency>
         
         <!-- Specific Neoload -->
@@ -300,6 +292,11 @@
         	<artifactId>jdom</artifactId>
         	<version>2.0.2</version>
         </dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
         
         <dependency>
 	        <groupId>org.sonarsource.java</groupId>
@@ -310,21 +307,27 @@
         <dependency> 
 	      <groupId>org.mockito</groupId>
 	      <artifactId>mockito-core</artifactId>
-	      <version>3.12.4</version>
+	      <version>5.7.0</version>
 	      <scope>test</scope>
 	    </dependency>
-	   <dependency>
-	      <groupId>org.powermock</groupId>
-	      <artifactId>powermock-api-mockito2</artifactId>
-	      <version>${powermock.version}</version>
-	      <scope>test</scope>
-	   </dependency>
-	   <dependency>
-	      <groupId>org.powermock</groupId>
-	      <artifactId>powermock-module-testng</artifactId>
-	      <version>${powermock.version}</version>
-	      <scope>test</scope>
-	   </dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-testng</artifactId>
+			<version>0.5.2</version>
+			<scope>test</scope>
+		</dependency>
+<!--	   <dependency>-->
+<!--	      <groupId>org.powermock</groupId>-->
+<!--	      <artifactId>powermock-api-mockito2</artifactId>-->
+<!--	      <version>${powermock.version}</version>-->
+<!--	      <scope>test</scope>-->
+<!--	   </dependency>-->
+<!--	   <dependency>-->
+<!--	      <groupId>org.powermock</groupId>-->
+<!--	      <artifactId>powermock-module-testng</artifactId>-->
+<!--	      <version>${powermock.version}</version>-->
+<!--	      <scope>test</scope>-->
+<!--	   </dependency>-->
         <dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>jetty-repacked</artifactId>
@@ -358,7 +361,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.8</version>
+				<version>3.6.1</version>
 				<executions>
 					<execution>
 						<phase>prepare-package</phase>
@@ -517,21 +520,24 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.11.0</version>
 <!--				<version>3.9.0</version>-->
 				<configuration>
 					<encoding>utf-8</encoding>
-					<source>8</source>
-					<target>8</target>
+					<source>11</source>
+					<target>11</target>
 					<!-- https://stackoverflow.com/questions/26817884/netbeans-and-bad-service-configuration-file-or-exception-thrown-while-construct-->
 <!--					<compilerArgument>-proc:none</compilerArgument>-->
-
+					<compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>java.desktop</arg>
+					</compilerArgs>
 				</configuration>
 				
 			</plugin>
 			<plugin>
 			    <artifactId>maven-antrun-plugin</artifactId>
-			    <version>1.7</version>
+			    <version>3.1.0</version>
 			    <executions>
 			        <execution>
 			            <phase>generate-sources</phase>
@@ -549,7 +555,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>3.2.1</version>
 				<configuration>
 					<suiteXmlFiles>
 						<suiteXmlFile>data/core/testng/tu.xml</suiteXmlFile>
@@ -587,7 +593,7 @@
 			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>3.2.1</version>
 				<configuration>
 					<skipTests>${skipTests}</skipTests>
                 	<skipITs>${skipITs}</skipITs>
@@ -637,9 +643,9 @@
 				</executions>
     		</plugin>
             <plugin>
-				<groupId>com.nickwongdev</groupId>
+				<groupId>dev.aspectj</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
-				<version>1.12.1</version>
+				<version>1.13.1</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.aspectj</groupId>
@@ -648,9 +654,9 @@
 					</dependency>
 				</dependencies>
 				<configuration>
-					<complianceLevel>1.8</complianceLevel>
-					<source>1.8</source>
-					<target>1.8</target>
+					<complianceLevel>11</complianceLevel>
+					<source>11</source>
+					<target>11</target>
 					<showWeaveInfo>false</showWeaveInfo>
 					<Xlint>unmatchedSuperTypeInCall=ignore</Xlint>
 					<weaveDependencies>
@@ -690,7 +696,7 @@
 			</plugin>
             <plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.6.0</version>
 				<dependencies>
 					<dependency>
 						<groupId>${project.groupId}</groupId>
@@ -719,7 +725,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.7</version> 
+				<version>3.3.1</version>
 				<executions>
 					<execution>
 						<id>default-resources</id>
@@ -797,7 +803,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
+				<version>3.3.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -810,7 +816,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.3.0</version>
 				<configuration>
 					<skip>${skipJar}</skip>
 					<finalName>seleniumRobot</finalName>
@@ -841,9 +847,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9.1</version>
+				<version>3.6.0</version>
 				<configuration>
-			      <source>8</source>
+			      <source>11</source>
 					<skip>${skipJavadoc}</skip>
 			    </configuration> 
 				<executions>
@@ -853,7 +859,11 @@
 							<goal>jar</goal>
 						</goals>
 						<configuration> <!-- disable checking for java 8 -->
-							<additionalparam>-Xdoclint:none</additionalparam>
+							<additionalOptions>
+								<additionalOption>-Xdoclint:none</additionalOption>
+							</additionalOptions>
+							<legacyMode>true</legacyMode>
+							<skip>false</skip>
 						</configuration>
 					</execution>
 				</executions>
@@ -861,7 +871,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.5</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<id>sign-artifacts</id>
@@ -880,7 +890,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>2.7</version>
+				<version>3.4.5</version>
 				<configuration>
 					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
 				</configuration>
@@ -888,7 +898,7 @@
 			<plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-release-plugin</artifactId>
-		        <version>2.5.3</version>
+		        <version>3.0.1</version>
 		        <configuration>
 		        	<arguments>${proxyString}</arguments>
 		        </configuration>
@@ -896,7 +906,7 @@
 		    <plugin> 
 		      	<groupId>com.mycila</groupId>
 		      	<artifactId>license-maven-plugin</artifactId>
-		      	<version>2.11</version>
+		      	<version>4.3</version>
 		      	<configuration>
 		      		<header>${project.basedir}/../doc/license_header.txt</header>
 		      		
